--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "lib-flexible": "^0.3.2",
+    "postcss-px2rem": "^0.3.0",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -21,6 +23,7 @@
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "px2rem-loader": "^0.1.9",
     "vue-template-compiler": "^2.6.11"
   }
 }
