--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
     "lib-flexible": "^0.3.2",
+    "moment": "^2.29.1",
     "postcss-px2rem": "^0.3.0",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
